# corpus

./: .gitignore  README.md  pyproject.toml
.claude/skills/example/: SKILL.md
.claude/skills/slurm/: SKILL.md
.cursor/skills/example/: SKILLS.md
corpus/algorithms/: deduplication.py
corpus/datasets/: base.py  code.py  constants.py  ensemble.py  library.py  math.py  synthetic.py  wikipedia.py
corpus/mixture/: base.py  embedding.py  guardrail.py
corpus/synthetic/: base.py  models.py
corpus/tools/: accounting.py  discover_datasets.py  download.py
docs/: data_mix_sources.md  pretraining_data.md
examples/common_crawl/: cc.py  config.yaml
scripts/: ray.slurm  run.sh
scripts/datasets/: cc.sh
scripts/dev/: format_code.sh  slurm.sh  test.sh
tests/: test_code.py  test_datasets.py  test_ensemble.py  test_library.py  test_math.py  test_synthetic.py  test_wikipedia.py
