[project]
name = "corpus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "filelock>=3.28.0",
    "fsspec>=2026.3.0",
    "huggingface-hub>=1.10.2",
    "hydra-core>=1.3.2",
    "loguru>=0.7.3",
    "psutil>=7.2.2",
    "pyarrow>=23.0.1",
    "pytest>=9.0.3",
    "ray[data,default]>=2.55.0",
    "rich>=15.0.0",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "-s"
testpaths = ["tests"]
